syntax = "proto3";
package transactionapi;

option go_package = "transactionapi/transactionapi";

message Transaction {
  string id = 1;
  string from = 2;
  int64 block_id = 3;
  string to = 4;
  string timestamp = 5;
  string value = 6;
  string gas = 7;
}

service TransactionService {
  rpc GetTransactions(GetTransactionsRequest) returns (GetTransactionsResponse) {}
}

message GetTransactionsRequest {
  string id = 1;
  string from = 2;
  int64 block_id = 3;
  string to = 4;
  string timestamp = 5;
  string value = 6;
  string gas = 7;
  PageRequest page = 8;
}

message GetTransactionsResponse {
  repeated Transaction transactions = 1;
}

message PageRequest {
  int64 size = 2;
  int64 num = 3;
}
